<resources>
    <string name="app_name">Homework Application</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="f_name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="u_name">User Name</string>
    <string name="welcome">Hello</string>
    <string name="login">Log In</string>
    <string name="alr_registered">ALREADY REGISTERED</string>
    <string name="register">REGISTER</string>
</resources>