<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/homeworkcolor1"
    tools:context=".LogInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="250dp">

        <TextView
            android:id="@+id/signin_welcome_text"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/abhaya_libre_medium"
            android:text="@string/welcome"
            android:textColor="@color/homeworkcolor3"
            android:textFontWeight="1"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/signin_welcome_subj"
            android:textFontWeight="1"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:layout_weight="1"
            android:text=""
            android:textColor="@color/homeworkcolor3"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp">

        <EditText
            android:id="@+id/signin_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp">

        <EditText
            android:id="@+id/signin_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="570dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp">

        <Button
            android:id="@+id/signin_loginbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login"
            android:backgroundTint="@color/homeworkcolor3"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="625dp"
        android:layout_marginLeft="170dp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/signin_to_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:cursorVisible="true"
            android:focusable="auto"
            android:text="Don't have account? Sign Up !"
            android:textColor="@color/homeworkcolor3"
            android:textSize="15sp" />
    </LinearLayout>
</RelativeLayout>

